# petri

./: .editorconfig  .env.dist  .gitignore  .readthedocs.yml  .travis.yml  Dockerfile  README.rst  TODO  clear  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  tox.ini  version
.github/workflows/: fmt_lint_test_build_publish.yml  publish-to-test-pypi.yml
docker/: .htpasswd  Dockerfile  docker-compose.yml  entrypoint.sh  publish.sh
docs/: requirements.txt
docs/source/: conf.py  index.rst  petri.base_settings.rst  petri.dotenv_.rst  petri.logging_.rst  petri.metadata.rst  petri.rst
examples/: README.rst
examples/a_pkg/: pyproject.toml
petri/: __init__.py  __main__.py  _logging_.py  base_settings.py  dot_env.py  dotenv_.py  ext.py  loggin.py  logging_.py  metadata.py  settings.py
tests/: .env.test  __init__.py  conftest.py  pyproject.toml
tests.bkp/data/project_test/: Dockerfile
tests.bkp/data/script_test/: script_example.py
tests.bkp/unit/: test_import.py
tests/a_pkg/: Dockerfile  install-test-publish.sh  pyproject.toml
tests/a_pkg/a_pkg/: __init__.py  my_module.py
tests/a_pkg/tests/: test_a_pkg.py
tests/data/: sample_script.py
tests/data/project_test/a_package/: __init__.py
tests/data/script_test/: pyproject.toml
tests/features/: 00.feature  000.feature  environment.py  float_sample.feature
tests/features/steps/: 00.py  000.py  float_sample.py
tests/fixtures/a_pkg/: pyproject.toml
tests/fixtures/a_pkg/a_pkg/: __init__.py  settings.py
tests/fixtures/a_pkg/docker/: Dockerfile  add_petri_install_test_build_publish.sh  auth.toml  config.toml
tests/fixtures/a_pkg/tests/: test_a_pkg.py
tests/fixtures/second_order/: pyproject.toml
tests/fixtures/second_order/docker/: Dockerfile  add_a_pkg_install_test.sh
tests/fixtures/second_order/second_order/: settings.py
tests/fixtures/second_order/tests/: test_second_order.py
tests/integration/: test_000_import.py
tests/second_order/: .env.dist  Dockerfile  install-test.sh  pyproject.toml
tests/second_order/second_order/: __init__.py
tests/second_order/tests/: test_second_order.py
tests/unit/: __init__.py  settings.py  test_000_import.py  test_001_metadata.py  test_002_settings.py  test_003_init.py  test_004_log.py  test_01_nodebug.py  test_02_bootstrap.py  test___init__.py  test_bootstrap.py  test_dot_env.py  test_env_file.py  test_ext.py  test_import.py  test_init.py  test_log.py  test_loggin.py  test_logging.py  test_meta.py  test_settings.py
tests/unit/project_test/: pyproject.toml
tests/unit/project_test/a_package/: __init__.py
tests/unit/script_test/: script_example.py
