[tool.poetry]
name = "petri"
version = "0.23.0"
description = "Python projects (app/lib) config initializator."
license = "Unlicense"
authors = [
  "Pablo Woolvett <pablowoolvett@gmail.com>"
]
readme = "README.rst"
homepage = "https://pypi.org/project/petri/"
repository = "https://github.com/pwoolvett/petri"
documentation = "https://petri.readthedocs.io/en/stable/"
keywords = [
  "pyproject.toml",
  "dotenv",
  "boilerplate",
  "pydantic",
  "log"
]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.10.3"
pydantic = "^0.32.2"

doc8 = {version = "^0.8.0", optional = true}
docutils = {version = "^0.15.2", optional = true}
pytest-html = "^2.0.0"


[tool.poetry.dev-dependencies]
pip = "^19.2.3"
blackini = "^0.1.6"
pytest = "^5.1.2"
autopep8 = "^1.4.4"
isort = "^4.3.21"
docformatter = "^1.3"
flake8 = "^3.7.8"
mypy = "^0.720"
bandit = "^1.6.2"

a-pkg = {path = "examples/a_pkg", develop = false}
pytest-cov = "^2.7.1"

[tool.poetry.extras]
docs = ["doc8", "docutils"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
