[tool.poetry]
name = "petri"
version = "0.24.1"
description = "Free your python code from 12-factor boilerplate."
license = "Unlicense"
authors = [
    "Pablo Woolvett <pablowoolvett@gmail.com>",
]
readme = "README.rst"
homepage = "https://pypi.org/project/petri/"
repository = "https://github.com/pwoolvett/petri"
documentation = "https://petri.readthedocs.io/en/stable/"
keywords = [
    "dotenv",
    "boilerplate",
    "12-factor",
    "pydantic",
    "structlog",
]

[tool.poetry.dependencies]
python = "^3.6"
python-dotenv = "^0.10.3"
pydantic = "^0.32.2"
structlog = "^19.1.0"
importlib_metadata = "^0.23"

colorama = {version = "^0.4.1", optional = true}

[tool.poetry.dev-dependencies]
pip = "^19.2.3"

# format
blackini = "^0.1.6"
isort = "^4.3.21"
autopep8 = "^1.4.4"
docformatter = "^1.3"

# lint
flake8 = "^3.7.8"
flake8-bugbear = "^19.8.0"
mypy = "^0.720"
bandit = "^1.6.2"
pylint = "^2.4.1"

# test
pytest = "^5.1.2"
pytest-html = "^2.0.0"
pytest-cov = "^2.7.1"

# doc
doc8 = "^0.8.0"
docutils = "^0.15.2"
Sphinx = "^1.8"
sphinx_rtd_theme = "^0.4.2"
sphinx-autodoc-typehints = "^1.5"
sphinxcontrib-apidoc = "^0.3.0"

[tool.poetry.extras]
color = [ "colorama", ]
docs = [ "doc8", "docutils","Sphinx","sphinx_rtd_theme","sphinx-autodoc-typehints","sphinxcontrib-apidoc",]
pytest = [ "pytest", "pytest-html", "pytest-cov" ]
lint = [ "flake8", "flake8-bugbear", "mypy", "bandit", "pylint", ]

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"
