[tool.meta]
release = "pre-alpha"
maintainer = "Maintainer Name <maintainer@mail.com>"
copyright = "A copyright"
url = "www.a_package.com"
license = "A License"

[tool.poetry]
name = "a_pkg"
version = "1.2.3"
description = "A description"
authors = [
"Author Name <author@mail.com>"
]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"
petri = "^0.22.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
