[tool.meta]
release = "pre-alpha"
maintainer = "Maintainer Name <maintainer@mail.com>"
copyright = "A copyright"
url = "www.second_order.com"
license = "A License"

[tool.poetry]
name = "second_order"
version = "4.5.6"
description = "A description"
authors = [
"Author Name <author@mail.com>"
]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[[tool.poetry.source]]
name = "notpypi"
url = "http://notpypi:8080/simple/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
