[tool.poetry]
name = "second_order"
version = "4.5.6"
description = "A description"
authors = [
"Author Name <author@mail.com>"
]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
