[tool.meta]
release = "pre-alpha"
maintainer = "Maintainer Name <maintainer@mail.com>"
copyright = "A copyright"
url = "www.a_package.com"
license = "A License"

[tool.poetry]
name = "a_package"
version = "1.2.3"
description = "A description"
authors = [
"Author Name <author@mail.com>"
]
readme = "README.rst"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
